; ModuleID = '/home/carl/AnghaBench/seafile/common/extr_seafile-crypt.c_seafile_generate_magic.c'
source_filename = "/home/carl/AnghaBench/seafile/common/extr_seafile-crypt.c_seafile_generate_magic.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, i32 }

@.str = private unnamed_addr constant [5 x i8] c"%s%s\00", align 1
@TRUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @seafile_generate_magic(i32 %0, i8* %1, i8* %2, i8* %3, i8* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca %struct.TYPE_5__*, align 8
  %12 = alloca [32 x i8], align 16
  %13 = alloca [16 x i8], align 16
  store i32 %0, i32* %6, align 4
  store i8* %1, i8** %7, align 8
  store i8* %2, i8** %8, align 8
  store i8* %3, i8** %9, align 8
  store i8* %4, i8** %10, align 8
  %14 = call %struct.TYPE_5__* @g_string_new(i32* null)
  store %struct.TYPE_5__* %14, %struct.TYPE_5__** %11, align 8
  %15 = load %struct.TYPE_5__*, %struct.TYPE_5__** %11, align 8
  %16 = load i8*, i8** %7, align 8
  %17 = load i8*, i8** %8, align 8
  %18 = call i32 @g_string_append_printf(%struct.TYPE_5__* %15, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i8* %16, i8* %17)
  %19 = load %struct.TYPE_5__*, %struct.TYPE_5__** %11, align 8
  %20 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %19, i32 0, i32 1
  %21 = load i32, i32* %20, align 4
  %22 = load %struct.TYPE_5__*, %struct.TYPE_5__** %11, align 8
  %23 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = load i32, i32* %6, align 4
  %26 = load i8*, i8** %9, align 8
  %27 = getelementptr inbounds [32 x i8], [32 x i8]* %12, i64 0, i64 0
  %28 = getelementptr inbounds [16 x i8], [16 x i8]* %13, i64 0, i64 0
  %29 = call i32 @seafile_derive_key(i32 %21, i32 %24, i32 %25, i8* %26, i8* %27, i8* %28)
  %30 = load %struct.TYPE_5__*, %struct.TYPE_5__** %11, align 8
  %31 = load i32, i32* @TRUE, align 4
  %32 = call i32 @g_string_free(%struct.TYPE_5__* %30, i32 %31)
  %33 = getelementptr inbounds [32 x i8], [32 x i8]* %12, i64 0, i64 0
  %34 = load i8*, i8** %10, align 8
  %35 = call i32 @rawdata_to_hex(i8* %33, i8* %34, i32 32)
  ret void
}

declare dso_local %struct.TYPE_5__* @g_string_new(i32*) #1

declare dso_local i32 @g_string_append_printf(%struct.TYPE_5__*, i8*, i8*, i8*) #1

declare dso_local i32 @seafile_derive_key(i32, i32, i32, i8*, i8*, i8*) #1

declare dso_local i32 @g_string_free(%struct.TYPE_5__*, i32) #1

declare dso_local i32 @rawdata_to_hex(i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
